Fixed a bug that allowed final row images to jump to the next row.

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -146,7 +146,7 @@ header {
 }
 
 .inner {
-    max-width: 35rem;
+    max-width: 60%;
     text-align: center;
     color: #fff;
     padding: 0 2rem;
